--- a/html/servicios.html
+++ b/html/servicios.html
@@ -5,45 +5,96 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios | Amarellus SEO</title>
+    <!--Boostrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <!-- LINK CSS -->
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
 
-    <header>
-        <img src="../imgs/amerellus-logo.png" alt="amarellus seo lab" width="150px">
-        <nav>
-            <ul>
-                <li>
-                    <a href="../index.html">Home</a>
-                </li>
-                <li>
-                    <a href="servicios.html">Servicios</a>
-                </li>
-                <li>
-                    <a href="nosotros.html">Nosotros</a>
-                </li>
-                <li>
-                    <a href="blog.html">Blog</a>
-                </li>
-                <li>
-                    <a href="contacto.html">Contacto</a>
-                </li>
-            </ul>
-        </nav>
-        <main>
-            <section>
-                <h1>Nuestros Servicios SEO</h1>
-            </section>
-        </main>
+    <body class="Montserrat">
+        <div class="Newsletter-services">
+            <p> Sumate al Newsletter y Obtené una <strong>Asesoría 100% Gratuita</strong>
+            </p>
+        </div>
+        <header class="header-services">
+            <div>
+                <div class="container">
+                    <div class="logo-services">
+                        <img src="../imgs/amerellus-logo.png" alt="amarellus seo lab" width="150px">
+                    </div>
+                    <nav class="nav-services">
+                        <ul>
+                            <li><a href="../index.html">Home</a></li>
+                            <li><a href="servicios.html">Servicios</a></li>
+                            <li><a href="nosotros.html">Nosotros</a></li>
+                            <li><a href="blog.html">Blog</a></li>
+                            <li><a href="contacto.html">Contacto</a></li>
+                        </ul>
+                    </nav>
+                </div>
+        </header>
+        </header>
+        <section>
+            <div id="carouselExample" class="carousel slide">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="/imgs/photo-1600469984476-c713650f1b1b.avif" class="d-block w-100"
+                            alt="posicionamiento">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/imgs/photo-1548345680-f5475ea5df84.avif" class="d-block w-100" alt="agencia seo">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/imgs/seo lab.jpg" class="d-block w-100" alt="seo lab">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+                <div class="overlay"></div>
+                <!-- Título sobre el carrusel -->
+                <div class="carousel-caption">
+                    <h1>Nuestros Servicios <span>SEO</span></h1>
+                    <p>Especialistas en Posicionamiento Web</p>
+                    <div class="wrapper">
+                        <a href="contacto.html" class="contact-button" target="_blank">Agendar Video Llamada</a>
+                    </div>
+                </div>
+            </div>
+            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+            </div>
+        </section>
 
-    </header>
-    <footer>
-        <p>© Designed by Amarellus SEO Lab. All Rights Reserved. Terms of Service and Privacy Policy.</p>
-        </p>
-    </footer>
-</body>
+        </header>
+        <footer>
+            <p>© Designed by Amarellus SEO Lab. All Rights Reserved. Terms of Service and Privacy Policy.</p>
+            </p>
+        </footer>
+        <section>
+            <!--scripts de boostrap-->
+            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+                integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+                crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+                integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+                crossorigin="anonymous"></script>
+        </section>
+    </body>
 
 
 </html>
